
package NKikimrSchemeTypeMetadata;
option java_package = "ru.yandex.kikimr.proto";

message TMetadata {

    message TType {
        optional uint32 Id = 1;
        optional bytes Name = 2;
        optional uint32 Flags = 3;
        optional uint32 MaxSize = 4;
        optional uint32 MinSize = 5;

    }

    repeated TType Type = 1;
}
